# goldsrc_voice_extract

./: Cargo.toml
src/: decoder.rs  main.rs
